--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,8 +4,14 @@
 {% block content %}
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
-
-    <!-- ============================ COMPONENT LOGIN   ================================= -->
+         
+    {% if request.GET.command  == 'verification'%}
+         <div class="container mx-auto alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
+            Thank you for registering with us. We have sent you a verification email to your email address [{{reguest.GET.email}}]
+            <br><br>
+            Already verified? <a href="{% url 'login'%}">Login</a>
+         </div>
+    {% else %}
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
             
           <div class="card-body">
@@ -21,7 +27,7 @@
               </div> <!-- form-group// -->
               
               <div class="form-group">
-                  <a href="#" class="float-right">Forgot password?</a> 
+                  <a href="{% url 'forgotPassword'%}" class="float-right">Forgot password?</a> 
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
@@ -35,7 +41,7 @@
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
-    
+    {% endif %}
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 
